--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:image" content="/ekarikthin-og.jpg" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/jpg" sizes="32x32" href="/images/eka36.jpg" />
+    <link rel="icon" type="image/jpg" sizes="16x16" href="/images/eka16.jpg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
     
